--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -19,7 +19,7 @@
         </div>
             <div class="content-body">
                 <div class="success-text">Success!</div>
-                <div class="description line-1"> [NEW CODE to MERGE] Azure DevOps Project has been successfully setup</div>
+                <div class="description line-1"> [NEW FEATURE2 : CODE to MERGE] Azure DevOps Project has been successfully setup</div>
                 <div class="description line-2"> FOR NEW FEATURE2 --- Your HTML app is up and running on Azure</div>
                 <div class="next-steps-container">
                     <div class="next-steps-header">Next up</div>
